--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -101,10 +101,10 @@ menuitem "Save bot waypoints"		[ wpsave; echo "Waypoints saved in ...bot\waypoin
 
 newmenu Waypoints
 
-menuitem "Add waypoint"				"addwp 0"
+menuitem "Add a waypoint"			"addwp 0"
 menuitem "Add auto-connecting waypoint"		"addwp 1"
 menuitem """"
-menuitem "Delete waypoint"			"delwp"
+menuitem "Delete a waypoint"			"delwp"
 menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
 
 
@@ -123,15 +123,12 @@ menuitem "Delete End of 1-way path"		"delpath1way2"
 
 newmenu "Other bot operations"
 
-menuitem "Make waypoints visible"		"wpvisible 1"
-menuitem "Make waypoints invisible"		"wpvisible 0"
-menuitem """"
 menuitem "Set waypoint as jumpable"		"setjumpwp"
 menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
 menuitem "Set waypoint direction (yaw)"		"setwpyaw"
 menuitem """"
-menuitem "Select waypoints by clicking"		"xhairwpsel 1"
-menuitem "Select waypoints by the nearest one"	"xhairwpsel 0"
+menuitemslider "Waypoint visibility: " 0 1 "($wpvisible)" 1 ["Hide waypoints" "Show waypoints"] "wpvisible $arg1"
+menuitemslider "Select/place waypoints by: " 0 1 "($xhairwpsel)" 1 ["Your current location" "Clicking a point on the grid"] "xhairwpsel $arg1"
 
 
 newmenu "Delete all waypoints?"
