basics.xml finished (docs)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2114 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -17,6 +17,7 @@ menuitem "Vote to force a team change" 		[ showmenu "force team" ]
 menuitem "Vote to kick a player"		[showmenu "kick player"]
 menuitem "Vote to ban a player" 		[showmenu "ban player"]
 menuitem "Vote to remove bans"			"removebans"
+menuitem "Vote for autoteam"			[ showmenu "Auto Adjust Teams" ]
 
 newmenu Gamemode
 
@@ -35,6 +36,11 @@ newmenu Mastermode
 
 menuitem "Unlock the server (open)"		"mastermode 0"
 menuitem "Lock the server (private)"		"mastermode 1"
+
+newmenu "Auto Adjust Teams"
+
+menuitem "Turn auto-team on"	"autoteam 1"
+menuitem "Turn auto-team off"	"autoteam 0"
 
 
 newmenu voicecom 1 1
