--- a/ac/packages/maps/ac_desert2.cfg
+++ b/ac/packages/maps/ac_desert2.cfg
@@ -69,6 +69,7 @@ mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"            //56
 mapmodel 0  0 0 0 "sail"           //57
 mapmodel 0  0 0 0 "signs/arab"     //58 
+mapmodel 2 16 0 0 "nothing"	   //59
 
 texturereset
 
