--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -135,6 +135,10 @@ mapmodel 2 6 0 0 "toca/rack"			//109
 mapmodel 2 2 0 0 "toca/airconditioner"		//110
 mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
 
+mapmodel 1 24 0 0 "fence"           //112 mind the orientation of fence components (lightning)
+mapmodel 1 24 0 0 "fencepost"       //113
+mapmodel 1 24 0 0 "fencegate_closed"//114
+mapmodel 0  0 0 0 "signs/arab"     //115
 
 
 // skybox for this map - check /packages/skymaps/
@@ -337,7 +341,7 @@ texture 0 "./makke/dirt_01.jpg"
 texture 0 "./makke/stuck1.jpg"
 texture 0 "./noctua/ground/mud01.jpg"
 texture 0 "./noctua/ground/pebble01.jpg"
-texture 0 "./noctua/ground/ground02.jpg"
+texture 0 "./noctua/ground/ground02.jpg"<Harps> SeargeantShithead: was the "other fps" called AssaultCube?
 texture 0 "./noctua/ground/ground06.jpg"
 
 //-----rock/stone----------------
