--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -30,7 +30,7 @@ registersound "player/pain5"        //S_PAIN5
 registersound "player/pain6"        //S_PAIN6
 registersound "player/die1"         //S_DIE1
 registersound "player/die2"         //S_DIE2
-registersound "weapon/grenade_exp" 10000  //S_FEXPLODE
+registersound "weapon/grenade_exp"  //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
 registersound "ctf/flagdrop"       //S_FLAGDROP
@@ -53,6 +53,7 @@ registersound "player/crouch" 100 1    // S_FOOTSTEPSCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
 registersound "player/underwater"       // S_UNDERWATER
+registersound "misc/tinnitus"           // S_TINNITUS
 
 
 // ingame voice chat
