--- a/ac/packages/maps/ac_sunset.cfg
+++ b/ac/packages/maps/ac_sunset.cfg
@@ -233,9 +233,9 @@ texture 0 "./arcitool/Blockbohlen-natur.jpg"
 texture 0 "./arcitool/Zaun.jpg"
 texture 0 "./arcitool/Rundholz.jpg"
 texture 0 "./mitaman/grsites/wood060.jpg"
-texture 0 "./noctua/wood/blinds01.jpg"
+texture 0 "./johnsolo/shutters.jpg"
 texture 0 "./noctua/wood/fb_board.jpg"
-texture 0 "./noctua/wood/planks01.jpg"
+texture 0 "./johnsolo/bluewoody2.jpg"
 texture 0 "./noctua/wood/planks01_b.jpg"
 texture 0 "./noctua/wood/planks02.jpg"
 texture 0 "./noctua/wood/planks02_hor.jpg"
