fixed firstrun sound
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2204 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -1,8 +1,6 @@
-sleep 100 welcome
+// executed at first run, don't change
 
-alias welcome [
-    sleep 1000 [ 
-        music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
-        showmenu "QUICK setup"
-    ]
-]
+music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
+showmenu "QUICK setup"
+
+
