Removed obsolete fencepost.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2206 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_keller.cfg
+++ b/ac/packages/maps/ac_keller.cfg
@@ -23,7 +23,7 @@ mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //12
 mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "keller-post"       //14  
+mapmodel 1 8 0 0 "fencepost"       //14  
 mapmodel 1 8 0 0 "fencegate_open"  //15
 mapmodel 1 8 0 0 "fencegate_closed"//16
 mapmodel 0 0 0 0 "grass01"         //17
