--- a/ac/packages/maps/ac_arctic.cfg
+++ b/ac/packages/maps/ac_arctic.cfg
@@ -7,6 +7,8 @@
 // DIFFRENT SO UPON 2ND LOAD YOUR MAP
 // WOULD BE SCREWED UP...
 
+fog 1024
+
 mapmodelreset // start @ zero
 
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
@@ -76,6 +78,56 @@ mapmodel 0  0 0 0 "snowsail"           //57
 mapmodel 0 0 0 0 "icicle"
 mapmodel 1 3 0 0 "toca/wheel"
 mapmodel 2 1 0 0 "toca/tyre"
+mapmodel 0 1 0 0 "ladder_rung"			//58
+mapmodel 0 0 0 0 "drainpipe"			//59
+						//	Start of Tocas mapmodels.
+mapmodel 2 2 0 0 "toca/airconditioner"		//60
+mapmodel 0 0 0 0 "toca/bullet"			//61
+mapmodel 0 1 0 0 "toca/cinderblock"		//62
+mapmodel 1 7 0 0 "toca/commrack"		//63
+mapmodel 1 4 0 0 "toca/commrack2"		//64
+mapmodel 0 0 0 0 "toca/computer/monkeymou"	//65
+mapmodel 1 8 0 0 "toca/corrugated/beam"		//66 (For use with corrugated fence)
+mapmodel 1 4 0 0 "toca/guardrail"		//67 (Use nothing mapmodel to clip)
+mapmodel 1 4 0 0 "toca/guardrail2"		//68 (Use nothing mapmodel to clip)
+mapmodel 0 0 0 0 "toca/milkcarton"		//69
+mapmodel 0 0 0 0 "toca/monitor"			//70
+mapmodel 2 3 0 0 "toca/officedesk"		//71 (Use nothing mapmodel to clip the sides)
+mapmodel 0 5 0 0 "toca/plasmatv"		//72 (Use nothing mapmodel to clip the sides)
+mapmodel 3 1 0 0 "toca/platformmet"		//73
+mapmodel 0 6 0 0 "toca/powermeter"		//74
+mapmodel 1 6 0 0 "toca/rack"			//75 (Use nothing mapmodel to clip the sides)
+mapmodel 2 8 0 0 "toca/radarconsole"		//76 (Use nothing mapmodel to clip the sides)
+mapmodel 0 0 0 0 "toca/securitycam/secucam"	//77
+mapmodel 0 0 0 0 "toca/sgshell"			//78
+mapmodel 3 1 7 0 "toca/stairs1"			//79 (Use nothing mapmodels to clip the stairs)
+mapmodel 3 1 0 0 "toca/stairs2"			//80 (Use nothing mapmodels to clip the stairs)
+mapmodel 1 3 0 0 "toca/radioactivedrum"		//81
+mapmodel 1 2 0 0 "toca/radioactivedrum2"	//82
+mapmodel 1 2 0 0 "toca/trashbag"		//84
+mapmodel 1 3 0 0 "toca/trashcan"		//85
+mapmodel 1 2 0 0 "toca/tv"			//86
+mapmodel 2 3 0 0 "toca/utilitytable"		//87 (Use nothing mapmodels to clips the sides)
+mapmodel 0 0 0 0 "toca/signs/biohazard"		//89
+mapmodel 0 0 0 0 "toca/signs/chemical"		//90
+mapmodel 0 0 0 0 "toca/signs/confined"		//91
+mapmodel 0 0 0 0 "toca/signs/toxic"		//92
+mapmodel 0 0 0 0 "toca/signs/donotenter"	//93
+mapmodel 0 0 0 0 "toca/signs/explosives"	//94
+mapmodel 0 0 0 0 "toca/signs/firstaid"		//95
+mapmodel 0 0 0 0 "toca/signs/noentry"		//96
+mapmodel 0 0 0 0 "toca/signs/nosmoking"		//97
+mapmodel 0 0 0 0 "toca/signs/radioactive"	//98
+mapmodel 0 0 0 0 "toca/signs/restricted"	//99
+mapmodel 1 6 0 0 "toca/signs/target"		//100
+mapmodel 0 2 0 0 "toca/computer/pc"		//101 
+mapmodel 1 8 0 0 "toca/corrugated/fence1"	//102
+mapmodel 1 8 0 0 "toca/corrugated/fence2"	//103 
+mapmodel 0 0 0 0 "toca/securitycam/vertmount"	//104 (For use with camera mapmodel 77)
+mapmodel 0 0 0 0 "toca/securitycam/wallmount"	//105 (For use with camera mapmodel 77)
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//106
+mapmodel 0 0 0 0 "toca/airconditioner/interior"	//107
+						//	End of Tocas mapmodels.
 
 
 
