--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -48,12 +48,12 @@ registersound "misc/headshot" 10		// S_HEADSHOT
 registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
-registersound "player/footsteps" 60 1 // S_FOOTSTEPS
-registersound "player/crouch" 60 1    // S_FOOTSTEPSCROUCH
+registersound "player/footsteps" 40 1 // S_FOOTSTEPS
+registersound "player/crouch" 40 1    // S_FOOTSTEPSCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
 registersound "player/underwater"       // S_UNDERWATER
-registersound "misc/tinnitus"           // S_TINNITUS
+registersound "misc/tinnitus" 30           // S_TINNITUS
 
 
 // ingame voice chat
