--- a/ac/packages/maps/ac_arctic.cfg
+++ b/ac/packages/maps/ac_arctic.cfg
@@ -82,7 +82,7 @@ mapmodel 0 0 0 0 "plant01_d"       //24
 
 mapmodel 0 0 0 0 "plant01_s"       //25
 
-mapmodel 1 7 0 0 "tree01"          //26
+mapmodel 0 0 0 0 "tree01"          //26
 
 mapmodel 1 2 0 0 "chair1"          //27
 
@@ -148,7 +148,7 @@ mapmodel 0 0 0 0 "flyer"           //54
 
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 
-mapmodel 0 0 0 0 "aard"            //56
+mapmodel 1 1 0 0 "aard"            //56
 
 mapmodel 0  0 0 0 "snowsail"           //57
 
@@ -882,3 +882,5 @@ texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 
 texture 0 "./makke/box_3.jpg"           //241
+texture 0 "./johnsolo/bluewoody1.jpg"
+texture 0 "./johnsolo/bluewoody2.jpg"
