--- a/ac/config/scontext.cfg
+++ b/ac/config/scontext.cfg
@@ -8,7 +8,7 @@ alias context_prompt 2  // command prompt
 alias context_mapcfg 3  // map configs, we don't trust them
 
 // set allowed commands for the map config context
-alias mapcfgidents [ alias loadsky mapmodelreset mapmodel texturereset texture fog fogcolour mapsound watercolour ]
+alias mapcfgidents [ alias loadnotexture loadsky mapmodelreset mapmodel texturereset texture fog fogcolour mapsound watercolour ]
 loop i (listlen $mapcfgidents) [
     scriptcontext $context_mapcfg (at $mapcfgidents $i)
 ]
