reset alternative texture
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2276 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -147,6 +147,10 @@ loadsky "textures/skymaps/steini/steini4"
 //loadsky "textures/skymaps/makke/rocky"
 //loadsky "textures/skymaps/makke/mountain"
 
+// alternative texture
+loadnotexture // reset to default alternative texture
+// loadnotexture "makke/black.jpg" // any missing textures end up black
+
 // used textures in this map - check /packages/textures/
 
 // texture 0 is hardcoded as the sky
@@ -162,7 +166,7 @@ texturereset    // starts the texture slot/index at 0
 
 texture 0 "kurt/klite1.jpg" //dummy
 
-//-------------water-uncomment all but one!------
+//-------------water - comment all but one!------
 
 texture 0 "./noctua/water/water01.jpg"
 //texture 0 "./noctua/water/water04.jpg"
