--- a/ac/packages/maps/ac_sunset.cfg
+++ b/ac/packages/maps/ac_sunset.cfg
@@ -67,6 +67,8 @@ mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 0 0 0 0 "aard"            //56
+mapmodel 2 10 0 0 "nothing"	   //57
+mapmodel 0 1 0 0 "ladder_rung"     //58
 
 // skybox for this map - check /packages/skymaps/
 
