a bunch of small updates and stuff.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2283 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -113,7 +113,7 @@ keymap 289 F8 ""
 keymap 290 F9 ""
 keymap 291 F10 "getdemo"
 keymap 292 F11 "toggleconsole"
-keymap 293 F12 [ screenshot; sleep 3 [ echo "Screenshot created." ] ]
+keymap 293 F12 [ screenshot [ echo "Screenshot created." ] ]
 keymap 294 F13 ""
 keymap 295 F14 ""
 keymap 296 F15 ""
