--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -14,15 +14,18 @@ ac_mines:5:15:1
 ac_depot:5:15:1
 ac_power:5:15:1
 ac_elevation:5:15:1
+ac_sunset:5:15:1
 ac_desert3:5:15:1
 
 // dm
 ac_toxic:2:10:1
 ac_complex:2:10:1
 ac_snow:2:10:1
+ac_arctic:2:10:1
 
 // osok
 ac_desert2:10:10:1
 ac_desert:10:10:1
+
 
 // Change this file to make the map rotation different and add more..
