--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -26,7 +26,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems	"ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_snow ac_toxic ac_urban"
+genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
@@ -35,7 +35,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
-genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_urban"
+genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
 
@@ -104,6 +104,8 @@ menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hostin
 menuitem "Archangel			Map: ac_urban." ""
 menuitem "Mr.Floppy			Map: ac_keller."
 menuitem "DogDancing			Map: ac_shine."
+menuitem "R4zor				Map: ac_sunset."
+menuitem "KC				Map: ac_arctic."
 menuitem "" ""
 menuitem "Special thanks" ""
 menuitem "----------------" ""
@@ -134,7 +136,7 @@ menuitem "Texture sources" ""
 menuitem "------------------""
 menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
 menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
-menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar." ""
+menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo." ""
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
