--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -1,4 +1,5 @@
 clearsecuremaps
+securemap ac_arctic
 securemap ac_complex
 securemap ac_depot
 securemap ac_desert
@@ -10,5 +11,6 @@ securemap ac_mines
 securemap ac_power
 securemap ac_shine
 securemap ac_snow
+securemap ac_sunset
 securemap ac_toxic
 securemap ac_urban
