--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -116,7 +116,7 @@ bind F8 ""
 bind F9 ""
 bind F10 "getdemo"
 bind F11 "toggleconsole"
-bind F12 [ screenshot; sleep 3 [ echo "Screenshot created." ] ]
+bind F12 [ screenshot [ echo "Screenshot created." ] ]
 bind F13 ""
 bind F14 ""
 bind F15 ""
