clipped area and fixed spawn
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2289 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -139,7 +139,7 @@ mapmodel 1 24 0 0 "fence"           //112 mind the orientation of fence componen
 mapmodel 1 24 0 0 "fencepost"       //113
 mapmodel 1 24 0 0 "fencegate_closed"//114
 mapmodel 0  0 0 0 "signs/arab"     //115
-
+mapmodel 2 3 0 0 "nothing"
 
 // skybox for this map - check /packages/skymaps/
 
