--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -96,7 +96,7 @@ mapmodel 1 2 0 0 "toca/tv"			//70
 mapmodel 1 1 0 0 "toca/securitycam/vertmount"	//71
 mapmodel 1 1 0 0 "toca/securitycam/wallmount"	//72
 mapmodel 1 1 0 0 "toca/securitycam/secucam"	//73
-mapmodel 4 1 0 0 "bridge"		//74 - Check this...
+mapmodel 4 1 0 0 "bridge_shine"		//74 - Check this...
 mapmodel 0 0 0 0 "nothing"			//75
 mapmodel 0 0 0 0 "toca/guardrail"		//76
 mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping
