added scaffold into menus.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2299 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -8,6 +8,7 @@
 ac_urban:0:15:1
 ac_keller:0:15:1
 ac_shine:0:15:1
+ac_scaffold:0:15:1
 
 // ctf
 ac_mines:5:15:1
@@ -26,6 +27,7 @@ ac_arctic:2:10:1
 // osok
 ac_desert2:10:10:1
 ac_desert:10:10:1
+ac_scaffold:10:10:1
 
 
 // Change this file to make the map rotation different and add more..
