--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -9,6 +9,7 @@ securemap ac_elevation
 securemap ac_keller
 securemap ac_mines
 securemap ac_power
+securemap ac_scaffold
 securemap ac_shine
 securemap ac_snow
 securemap ac_sunset
