--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -26,7 +26,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
@@ -103,7 +103,7 @@ menuitem "MitaMAN			Map: ac_depot, plus textures." ""
 menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." ""
 menuitem "Archangel			Map: ac_urban." ""
 menuitem "Mr.Floppy			Map: ac_keller."
-menuitem "DogDancing			Map: ac_shine."
+menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures."
 menuitem "R4zor				Map: ac_sunset."
 menuitem "KC				Map: ac_arctic."
 menuitem "" ""
