--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -102,7 +102,7 @@ menuitem "daMfr0				Map: ac_snow." ""
 menuitem "MitaMAN			Map: ac_depot, plus textures." ""
 menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." ""
 menuitem "Archangel			Map: ac_urban." ""
-menuitem "Mr.Floppy			Map: ac_keller."
+menuitem "Mr.Floppy			Map: ac_keller, plus textures."
 menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures."
 menuitem "R4zor				Map: ac_sunset."
 menuitem "KC				Map: ac_arctic."
@@ -131,6 +131,9 @@ menuitem "wildweasel					Vote sounds." ""
 menuitem "Tremulous team				Gib sound." ""
 menuitem "Lukas Zapletal & Ludek Horacek		Music (Ping pong)." ""
 menuitem "Antiklimax					Sniper scope." ""
+menuitem "SimonOC					Nightball skymap" ""
+menuitem "LadyNightHawk				 	InhCanyons skymap" ""
+menuitem "Sock 						Iceflow skymap" ""
 menuitem "" ""
 menuitem "Texture sources" ""
 menuitem "------------------""
