--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -12,6 +12,8 @@ menuitem "About"			"showmenu about"
 menuitem "Quit"				"quit"
 
 
+// Start maps.
+
 alias genmapitems [
     alias n (listlen $arg1)
     loop i $n [
@@ -23,9 +25,8 @@ alias genmapitems [
         alias (concatword nextmap_ $listmapname) $nextmap
     ]
 ]
-
 newmenu maps
-
+// Add maps to the below list to include them in the CTF map menu.
 genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
@@ -33,11 +34,26 @@ menuitem	"Show all maps..." [ showmenu "all maps" ]
 newmenu "all maps"
 menudirlist "packages/maps" "cgz" "map $arg1"
 
-newmenu maps_ctf 
 
+
+newmenu maps_ctf 
+// Add maps to the below list to include them in the CTF map menu.
 genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
+
+newmenu botmaps
+
+alias genbotmaps [
+	loop i (listlen $arg1) [
+		alias listmapname (at $arg1 $i)
+		alias menutext $listmapname (concat map $listmapname)
+		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
+	]
+]
+// Add maps to the below list to include them in the CTF map menu.
+genbotmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+
 
 
 newmenu demo
