--- a/ac/packages/maps/ac_power.cfg
+++ b/ac/packages/maps/ac_power.cfg
@@ -1,4 +1,8 @@
-//fog 256
+//Power Station by wotwot, edited by makkE
+//Custom textures by wotwot and makkE
+//Custom mapmodels by makkE and Toca
+
+
 fogcolour 0
 
 // *IMPORTANT NOTE FOR AC-MAPPERS*
@@ -15,14 +19,14 @@ mapmodelreset // start @ zero
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
 //                                     models that can´t be clipped properly otherwise
 
-mapmodel 4  1 0 0 "bridge"    //1
+mapmodel 3  1 0 0 "bridge"    //1
 mapmodel 0 7 0 0 "ladder_7x"       //2
 mapmodel 0 8 0 0 "ladder_8x"       //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 0 11 0 0 "ladder_11x"     //5
 mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 0 12 0 0 "streetlamp"     //7
-mapmodel 0 12 0 0 "streetlamp"     //8
+mapmodel 1 12 0 0 "streetlamp"     //7
+mapmodel 1 12 0 0 "streetlamp"     //8
 mapmodel 3  2 0 0 "bench"          //9
 mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
@@ -40,7 +44,7 @@ mapmodel 0 0 0 0 "grass02_s"       //22
 mapmodel 0 0 0 0 "plant01"         //23
 mapmodel 0 0 0 0 "plant01_d"       //24
 mapmodel 0 0 0 0 "plant01_s"       //25
-mapmodel 0 0 0 0 "tree01"          //26
+mapmodel 1 7 0 0 "tree01"          //26
 mapmodel 1 2 0 0 "chair1"          //27
 mapmodel 0 0 0 0 "laptop1"         //28
 mapmodel 0 0 0 0 "picture1"        //29 If you wish to put a custom pic in the frame
@@ -73,12 +77,24 @@ mapmodel 0 0 0 0 "hook"            //52
 mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
-mapmodel 1 1 0 0 "aard"            //56
+mapmodel 0 0 0 0 "aard"            //56
 mapmodel 0 0 0 0 "wires/3x8"       //57
 mapmodel 0 0 0 0 "wires/2x8"       //58
 mapmodel 0 0 0 0 "wires/4x8a"      //59
 mapmodel 0 0 0 0 "wires/4x8"       //60
-mapmodel 0 0 0 0 "drainpipe"       //61
+mapmodel 1 8 0 0 "drainpipe"       //61
+mapmodel 1 8 0 0 "nothing"	     //62
+
+//Tocas mapmodels
+
+mapmodel 1 7 0 0 "toca/commrack"		//63
+mapmodel 1 3 0 0 "toca/commrack2"		//64
+mapmodel 0 0 0 0 "toca/monitor"		//65
+mapmodel 1 2 0 0 "toca/trashbag"		//66
+mapmodel 1 1 0 0 "toca/milkcarton"		//67
+mapmodel 1 7 0 0 "toca/commrack"		//68
+mapmodel 1 4 0 0 "toca/guardrail2"		//69
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//70
 
 // skybox for this map - check /packages/skymaps/
 
@@ -329,7 +345,7 @@ texture 0 "./makke/box_3.jpg"           //241
 //wotwots urban textures
 
 texture 0 "wotwot/urban/electric2.jpg"  
-texture 0 "wotwot/urban/electric2_plain.jpg"
+texture 0 "wotwot/urban/electric2_bla.jpg"
 texture 0 "wotwot/urban/asphalt1_l.jpg"  
 texture 0 "wotwot/urban/metaltrim1_ver.jpg"  
 texture 0 "wotwot/urban/metaltrim1_hor.jpg"
@@ -343,9 +359,9 @@ texture 0 "wotwot/urban/hatch1.jpg"
 texture 0 "wotwot/urban/manhole1.jpg"  
 
 
-//some textures made by makkE
+//textures made by makkE
 
-texture 0 "makke/door_rust.jpg"
+texture 0 "makke/door_metal.jpg"
 texture 0 "makke/door_metal.jpg"
 
 
@@ -356,8 +372,17 @@ texture 0 "wotwot/urban/cableshelf1_s_ver.jpg"
 texture 0 "wotwot/urban/cableshelf1_m_ver.jpg" 
 texture 0 "wotwot/urban/cableshelf1_l_ver.jpg" 
 texture 0 "wotwot/urban/electric4.jpg"  
-texture 0 "wotwot/urban/electric4_plain.jpg"
+texture 0 "wotwot/urban/electric4_bla.jpg"
 texture 0 "wotwot/urban/electric3.jpg"  
-texture 0 "wotwot/urban/electric3_plain.jpg"
+texture 0 "wotwot/urban/electric3_bla.jpg"
 texture 0 "wotwot/urban/electric1.jpg"  
-texture 0 "wotwot/urban/electric1_plain.jpg"
+texture 0 "wotwot/urban/electric1_bla.jpg"
+
+//modified skin for makkEs drainpipe-mapmodel
+texture 0 "wotwot/skin/drainpipe.jpg"  
+
+//modified skins for tocas mapmodels
+texture 0 "wotwot/skin/milkcarton.jpg"  
+texture 0 "wotwot/skin/guardrail2.jpg"  
+texture 0 "wotwot/skin/monitor.jpg"  
+texture 0 "wotwot/skin/commrack.jpg"  
