Map editing documentation: Cfg files - Complete.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2345 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -83,7 +83,7 @@ menuitem "Paths..."			[ showmenu "Paths" ]
 menuitem "Other operations..."		[ showmenu "Other bot operations" ]
 menuitem """"
 menuitem "Flood map with waypoints"	"wpflood"
-menuitem "Save bot waypoints"		[ wpsave; echo "Waypoints saved in ...bot\waypoints" ]
+menuitem "Save bot waypoints"		"wpsave"
 
 
 newmenu Waypoints
