updated default settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2348 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -154,7 +154,7 @@ loadnotexture // reset to default alternative texture
 // used textures in this map - check /packages/textures/
 
 // texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
+// texture 1 used to be hardcoded as the default liquid texture but is now nothing in particular.
 // texture 2 is the default wall texture (for new maps)
 // texture 3 is the default floor texture
 // texture 4 is the default ceiling texture
@@ -164,18 +164,13 @@ texturereset    // starts the texture slot/index at 0
 // Special note: Textures are limited to a maximum of 256, so you can not use more than 256 
 //               textures in a cfg, otherwise they will not show up.
 
-texture 0 "kurt/klite1.jpg" //dummy
 
-//-------------water - comment all but one!------
+texture 0 "kurt/klite1.jpg" // Dummy texture - Do not remove this or it will break your configurations!
 
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
 
 //-----brickwalls-------
 
+texture 0 "./makke/black.jpg" -> Place holder till we find a better texture. TODO: Find one.
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
 texture 0 "./arcitool/archibrick03.jpg"
