firstrun, menu entry for highprocesspriority
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2383 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -1,6 +1,11 @@
 // executed at first run, don't change
 
 music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
-showmenu "QUICK setup"
+
+alias delayed_firstrun [
+	showmenu "QUICK setup"
+]
+
+sleep 1000 delayed_firstrun
 
 
