--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -71,8 +71,8 @@ alias getgfxq [
 ]
 
 alias getsoundq [
-    if (= $maxsoundsatonce 40) [ result 3 ] [
-        if (= $maxsoundsatonce 10) [ result 2 ] [ result 1 ]
+    if (= $maxsoundsatonce 10) [ result 3 ] [
+        if (= $maxsoundsatonce 8) [ result 2 ] [ result 1 ]
     ]
 ]
 
@@ -147,13 +147,13 @@ alias new_gfx_quality [
         
 alias new_sound_quality [
     if (= $arg1 3) [ // high sound (DEFAULT)
-        maxsoundsatonce 40
+        maxsoundsatonce 10
         footsteps 1
         bulletairsound 1
         bulletbouncesound 1
     ] [
         if (= $arg1 2) [ // medium
-            maxsoundsatonce 10
+            maxsoundsatonce 8
             footsteps 1
             bulletairsound 0
             bulletbouncesound 1
@@ -235,6 +235,7 @@ menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 menuitemcheckbox "Dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
 menuitemcheckbox "Dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
+menuitemcheckbox "High process priority: " "$highprocesspriority" "highprocesspriority $arg1"
 
 menuitem "FPS range.." "showmenu fpsrange"
 
