new command 'serverdesc' temporary extends the server description
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2385 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -10,4 +10,5 @@ alias recorddemo [ callvote 8 1 ]
 alias stopdemo [ callvote 9 ]
 alias cleardemo [ callvote 10 $arg1 ]
 alias cleardemos [ callvote 10 0 ]
+alias serverdesc [ callvote 11 $arg1 ]
 alias demo [ mode -3; map $arg1 ]
