--- a/ac/packages/models/mapmodels/toca/door1/md3.cfg
+++ b/ac/packages/models/mapmodels/toca/door1/md3.cfg
@@ -1,7 +1,6 @@
 md3load tris.md3
 md3skin frente skin.png
 
-mdltranslucent 99
-mdlalphatest 30
-mdlalphatexture 1
+mdlalphatest 0
+mdlalphablend 1
 
