--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -84,10 +84,12 @@ mapmodel 3 7 0 0 "toca/radarconsole"		//58
 mapmodel 1 7 0 0 "toca/commrack"		//59
 mapmodel 1 3 0 0 "toca/commrack2"		//60
 mapmodel 1 0 0 0 "toca/powermeter"		//61
+
 //mapmodel 8 1 0 0 "toca/platform16"		//62
 mapmodel 0 0 0 0 "nothing"			//62 -------------
-mapmodel 1 3 0 0 "toca/steeldrum"		//63
-mapmodel 1 2 0 0 "toca/steeldrum2"		//64
+
+mapmodel 1 3 0 0 "toca/radioactivedrum"		//63
+mapmodel 1 2 0 0 "toca/radioactivedrum2"	//64
 mapmodel 1 2 0 0 "toca/trashbag"		//65
 mapmodel 1 2 0 0 "toca/computer/pc"		//66
 mapmodel 1 2 0 0 "toca/computer/monkeymou"	//67
@@ -97,8 +99,10 @@ mapmodel 1 2 0 0 "toca/tv"			//70
 mapmodel 1 1 0 0 "toca/securitycam/vertmount"	//71
 mapmodel 1 1 0 0 "toca/securitycam/wallmount"	//72
 mapmodel 1 1 0 0 "toca/securitycam/secucam"	//73
+
 //mapmodel 4 1 0 0 "toca/platform8"		//74
 mapmodel 4 1 0 0 "bridge"			//74  ------------
+
 mapmodel 1 8 0 0 "toca/wall"			//75
 mapmodel 0 0 0 0 "toca/guardrail"		//76
 mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping
@@ -136,16 +140,21 @@ mapmodel 1 8 0 0 "toca/corrugated/beam"		//108
 mapmodel 2 6 0 0 "toca/rack"			//109
 mapmodel 2 2 0 0 "toca/airconditioner"		//110
 mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
-mapmodel 1 1 0 0 "toca/ceillingfan"		//112
 
-mapmodel 0 0 0 0 ""nothing""	//113
-mapmodel 0 0 0 0 ""nothing""		//114
-mapmodel 1 12 0 0 ""nothing""		//115
-mapmodel 0 0 0 0 ""nothing""		//116
-mapmodel 1 12 0 0 ""nothing""		//117
-mapmodel 1 1 0 0 ""nothing""		//118
-mapmodel 1 1 0 0 "toca/door1"		//119
-mapmodel 1 1 0 0 "toca/window1"		//120
+//mapmodel 1 1 0 0 "toca/ceillingfan"	//112 crappy fan blades animation
+mapmodel 0 0 0 0 "nothing""		//112
+
+
+mapmodel 0 0 0 0  "nothing"		//113 exit sign
+mapmodel 0 0 0 0  "nothing"		//114 flag (amnimation test)
+mapmodel 1 12 0 0 "nothing"		//115 tree1
+mapmodel 0 0 0 0  "nothing"		//116 cross model for grass or plants
+mapmodel 1 12 0 0 "nothing"		//117 palmtree1
+
+
+mapmodel 1 1 0 0  "toca/milkcrate"		//118
+mapmodel 1 1 0 0  "toca/door1"			//119
+mapmodel 1 1 0 0  "toca/window1"		//120
 
 
 
@@ -155,9 +164,6 @@ mapmodel 1 1 0 0 "toca/window1"		//120
 
 //loadsky "textures/toca/skybox1/skybox1"
 //loadsky "textures/toca/skybox2/skybox2"
-
-
-
 
 
 // skybox for this map - check /packages/skymaps/
