load bots while loading screen is up
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2414 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -108,9 +108,4 @@ alias delta_spect_0 [ followplayer $arg1 ]
 alias timeremain [ echo time remaining: ($minutesremaining) ]
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
-
-
-alias start_intermission [
-    // say "gg"
-]
-
+alias mapstartonce [ ]
