--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -5,6 +5,7 @@ alias tmp_numbots 1
 alias tmp_mode
 alias tmp_botmap
 
+// add bots
 alias startbotmatch [
 
 	if (= $tmp_mode 7) [ // TDM
@@ -17,15 +18,21 @@ alias startbotmatch [
 	]
 ]
 
+// register events and change map
 alias startbotmap [
 	if $connected [ disconnect ] // async
 	sleep 1000 [ 
 	    echo starting botmatch..
+	    
+	    // register event that is fired during mapload
+	    alias mapstartonce [ 
+	        kickallbots
+	        startbotmatch // add bots
+	    ]
+	    
 		mode $tmp_mode
 	    map $tmp_botmap
     ]
-	
-	sleep 5000 [ kickallbots; startbotmatch ]
 ]
 
 
