--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -51,7 +51,7 @@ alias genbotmaps [
 		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
 	]
 ]
-// Add maps to the below list to include them in the CTF map menu.
+// Add maps to the below list to include them in the bot map menu.
 genbotmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 
 
