min/maxplayer setting in maprot.cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2417 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -2,7 +2,8 @@
 // WARNING: You can NOT use CubeScript in here!!
 
 // Use the following scheme...
-// map:mode:time:allowVote
+// map:mode:time:allowVote[:minplayer[:maxplayer]]
+// map will be skipped, if minplayer/maxplayer requirements are failed
 
 // tdm
 ac_urban:0:15:1
@@ -13,7 +14,7 @@ ac_scaffold:0:15:1
 // ctf
 ac_mines:5:15:1
 ac_depot:5:15:1
-ac_power:5:15:1
+ac_power:5:15:1:3       // skip, if <3 players
 ac_elevation:5:15:1
 ac_sunset:5:15:1
 ac_desert3:5:15:1
@@ -25,7 +26,7 @@ ac_snow:2:10:1
 ac_arctic:2:10:1
 
 // osok
-ac_desert2:10:10:1
+ac_desert2:10:10:1:0:6    // skip, if >6 players
 ac_desert:10:10:1
 ac_scaffold:10:10:1
 
