new sound config
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2426 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -42,6 +42,7 @@ registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/grenade_bounce1" // S_GRENADEBOUNCE1
 registersound "weapon/grenade_bounce2" // S_GRENADEBOUNCE2
 registersound "weapon/pistol_akreload" // S_RAKIMBO
+registersound "weapon/waterimpact"      // S_WATERIMPACT
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
 registersound "misc/headshot" 10		// S_HEADSHOT
@@ -50,6 +51,8 @@ registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 40 1 // S_FOOTSTEPS
 registersound "player/crouch" 40 1    // S_FOOTSTEPSCROUCH
+registersound "player/watersteps" 40 1  // S_WATERFOOTSTEPS
+registersound "player/watercrouch" 40 1 // S_WATERFOOTSTEPSCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
 registersound "player/underwater"       // S_UNDERWATER
