--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -147,14 +147,15 @@ mapmodel 0 0 0 0 "nothing""		//112
 
 mapmodel 0 0 0 0  "nothing"		//113 exit sign
 mapmodel 0 0 0 0  "nothing"		//114 flag (amnimation test)
-mapmodel 1 12 0 0 "nothing"		//115 tree1
+mapmodel 1 12 0 0 "toca/tree1"			//115
 mapmodel 0 0 0 0  "nothing"		//116 cross model for grass or plants
 mapmodel 1 12 0 0 "nothing"		//117 palmtree1
 
 
 mapmodel 1 1 0 0  "toca/milkcrate"		//118
-mapmodel 1 1 0 0  "toca/door1"			//119
-mapmodel 1 1 0 0  "toca/window1"		//120
+mapmodel 0 0 0 0  "toca/nothing"		//119
+mapmodel 0 0 0 0  "toca/nothing"		//120
+mapmodel 3 1 0 0  "toca/grid6x8"		//121
 
 
 
@@ -490,4 +491,5 @@ texture 0 "./makke/box_3.jpg"           //241
 //texture 0 "./toca/rubble1.jpg"
 //texture 0 "./toca/garagedoor1.jpg"
 //texture 0 "./toca/wall1.jpg"
+texture 0 "./toca/skin.png"
 
