--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -5,6 +5,7 @@ registersound "player/land" 250      // S_HARDLAND
 registersound "weapon/ric1"         // S_BULLETAIR1
 registersound "weapon/ric2"         // S_BULLETAIR2
 registersound "weapon/ric3"         // S_BULLETHIT
+registersound "weapon/waterimpact"      // S_BULLETWATERHIT
 registersound "weapon/knife"        //S_KNIFE
 registersound "weapon/usp"          //S_PISTOL
 registersound "weapon/pistol_reload"           //S_RPISTOL
@@ -14,7 +15,7 @@ registersound "weapon/sub"          //S_SUBGUN
 registersound "weapon/sub_reload"           //S_RSUBGUN
 registersound "weapon/sniper"       //S_SNIPER
 registersound "weapon/sniper_reload"           //S_RSNIPER
-registersound "weapon/auto"         //S_ASSAULT
+registersound "weapon/auto"          //S_ASSAULT
 registersound "weapon/auto_reload"           //S_RASSAULT
 registersound "misc/pickup_ammo_clip"           //S_ITEMAMMO
 registersound "misc/pickup_health"           //S_ITEMHEALTH
@@ -42,7 +43,6 @@ registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/grenade_bounce1" // S_GRENADEBOUNCE1
 registersound "weapon/grenade_bounce2" // S_GRENADEBOUNCE2
 registersound "weapon/pistol_akreload" // S_RAKIMBO
-registersound "weapon/waterimpact"      // S_WATERIMPACT
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
 registersound "misc/headshot" 10		// S_HEADSHOT
