Added tree1 variant for evaluation
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2434 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -147,13 +147,13 @@ mapmodel 0 0 0 0 "nothing""		//112
 
 mapmodel 0 0 0 0  "nothing"		//113 exit sign
 mapmodel 0 0 0 0  "nothing"		//114 flag (amnimation test)
-mapmodel 1 12 0 0 "toca/tree1"			//115
+mapmodel 1 12 0 0 "toca/tree1"			//115 tree prototype
 mapmodel 0 0 0 0  "nothing"		//116 cross model for grass or plants
 mapmodel 1 12 0 0 "nothing"		//117 palmtree1
 
 
 mapmodel 1 1 0 0  "toca/milkcrate"		//118
-mapmodel 0 0 0 0  "toca/nothing"		//119
+mapmodel 1 12 0 0 "toca/tree2"			//119 second tree prototype
 mapmodel 0 0 0 0  "toca/nothing"		//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
 
