--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -11,4 +11,5 @@ alias stopdemo [ callvote 9 ]
 alias cleardemo [ callvote 10 $arg1 ]
 alias cleardemos [ callvote 10 0 ]
 alias serverdesc [ callvote 11 $arg1 ]
+alias shuffleteams [ callvote 12 ]
 alias demo [ mode -3; map $arg1 ]
