--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -62,22 +62,22 @@ alias zoom [
 
 alias votemap [ mode $arg1; map $arg2 ]
 
-alias tdm   [ votemap 0 $arg1 ]
-alias ts    [ votemap 4 $arg1 ]
-alias ctf   [ votemap 5 $arg1 ]
-alias dm    [ votemap 2 $arg1 ]
-alias ffa   [ votemap 2 $arg1 ]
-alias lms   [ votemap 3 $arg1 ]
-alias pf    [ votemap 6 $arg1 ]
-alias lss   [ votemap 9 $arg1 ]
-alias insta [ votemap 10 $arg1 ]
+alias tdm   [ votemap 0 $arg1 ] -
+alias coop  [ votemap 1 $arg1 ] -
+alias dm    [ votemap 2 $arg1 ] -
+alias lms   [ votemap 3 $arg1 ] -
+alias ts    [ votemap 4 $arg1 ] -
+alias ctf   [ votemap 5 $arg1 ] -
+alias pf    [ votemap 6 $arg1 ] -
+alias lss   [ votemap 9 $arg1 ] - 
 alias osok  [ votemap 10 $arg1 ]
 alias tosok [ votemap 11 $arg1 ]
 
+
 //--------------------- editing -------------------------------
 
-// below is a fun new way of editing, with all using the mousewheel
-// try it out :)
+// The below is for editing using your mouse wheel. See the page 1 of the 
+// map editing guide for details on what's used for what.
 
 alias modifier 0
 alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
@@ -94,18 +94,22 @@ alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
 alias delta_edit_2 [ edittex $flrceil $arg1 ]
 alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
-alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
+alias delta_edit_5 [ entproperty 0 $arg1 ] 
+// End of using your mouse to edit
+// ------------------------------
+
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
 alias delta_spect_0 [ followplayer $arg1 ]
 
 // alternative weapon switching, no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
-//uncomment lines (remove the //) below to activate
+// uncomment lines (remove the //) below to activate
 
 //alias delta_game_0 [ if (= $arg1 1) [ primary ] [ secondary ] ]
 //bind lshift "grenades"
 //bind lalt "melee"
 
-alias timeremain [ echo time remaining: ($minutesremaining) ]
+alias timeremain [ echo 3Minutes remaining:5 ($minutesremaining) ]	
+alias timeremaining [ echo 3Minutes remaining:5 ($minutesremaining) ]
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
 alias mapstartonce [ ]
