--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -22,12 +22,11 @@ alias altaction [
 ]
 
 alias quicknadethrow [ 
-	alias prevweapon (curweapon)
 	if (> (magcontent 6) 0) [
-		grenades
+        if (!= (curweapon) 6) [grenades]
 		attack
-	] []
-	onrelease [ sleep 1 [ weapon $prevweapon ] ]
+    ]
+	onrelease [ sleep 1 [ if (= (curweapon) 6) [weapon (prevweapon)] ] ]
 ]
 
 loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
