added: rusted pipe model
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2468 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -159,6 +159,8 @@ mapmodel 1 12 0 0 "toca/tree2"			//119 second tree prototype
 mapmodel 1 1 0 0  "toca/pipes/concretepipe"	//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
 
+mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
+
 
 
 
