filled in "mode" in the reference
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2470 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -61,14 +61,14 @@ alias zoom [
 
 alias votemap [ mode $arg1; map $arg2 ]
 
-alias tdm   [ votemap 0 $arg1 ] -
-alias coop  [ votemap 1 $arg1 ] -
-alias dm    [ votemap 2 $arg1 ] -
-alias lms   [ votemap 3 $arg1 ] -
-alias ts    [ votemap 4 $arg1 ] -
-alias ctf   [ votemap 5 $arg1 ] -
-alias pf    [ votemap 6 $arg1 ] -
-alias lss   [ votemap 9 $arg1 ] - 
+alias tdm   [ votemap 0 $arg1 ]
+alias coop  [ votemap 1 $arg1 ]
+alias dm    [ votemap 2 $arg1 ]
+alias lms   [ votemap 3 $arg1 ]
+alias ts    [ votemap 4 $arg1 ]
+alias ctf   [ votemap 5 $arg1 ]
+alias pf    [ votemap 6 $arg1 ]
+alias lss   [ votemap 9 $arg1 ] 
 alias osok  [ votemap 10 $arg1 ]
 alias tosok [ votemap 11 $arg1 ]
 
@@ -107,8 +107,6 @@ alias delta_spect_0 [ followplayer $arg1 ]
 //bind lshift "grenades"
 //bind lalt "melee"
 
-alias timeremain [ echo 3Minutes remaining:5 ($minutesremaining) ]	
-alias timeremaining [ echo 3Minutes remaining:5 ($minutesremaining) ]
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
 alias mapstartonce [ ]
