added: metal pipe 2 model
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2471 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -160,6 +160,7 @@ mapmodel 1 1 0 0  "toca/pipes/concretepipe"	//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
 
 mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
+mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
 
 
 
