--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -151,7 +151,7 @@ mapmodel 1 12 0 0 "toca/tree1"			//115 tree prototype
 //mapmodel 0 0 0 0  "toca/grass1"		//116 cross model for grass or plants
 mapmodel 0 0 0 0 "nothing"		//116 bush
 
-mapmodel 1 12 0 0 "nothing"		//117 palmtree1
+mapmodel 1 12 0 0 "toca/palmtree1"		//117 palmtree1
 
 
 mapmodel 1 1 0 0  "toca/milkcrate"		//118
