alpha channel plants: bush1, smallpalm
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2482 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -141,24 +141,25 @@ mapmodel 2 6 0 0 "toca/rack"			//109
 mapmodel 2 2 0 0 "toca/airconditioner"		//110
 mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
 
+
 //mapmodel 1 1 0 0 "toca/ceillingfan"	//112 crappy fan blades animation
 mapmodel 0 0 0 0 "nothing""		//112
-
-
 mapmodel 0 0 0 0  "nothing"		//113 exit sign
-mapmodel 0 0 0 0  "nothing"		//114 flag (amnimation test)
+
+
+mapmodel 0 0 0 0  "toca/smallpalm"		//114 alpha channel test plant #1
 mapmodel 1 12 0 0 "toca/tree1"			//115 tree prototype
+
 //mapmodel 0 0 0 0  "toca/grass1"		//116 cross model for grass or plants
-mapmodel 0 0 0 0 "nothing"		//116 bush
+mapmodel 0 0 0 0 "toca/bush1"			//116 alpha channel test plant #2
 
-mapmodel 1 12 0 0 "toca/palmtree1"		//117 palmtree1
-
-
+mapmodel 1 12 0 0 "toca/palmtree1"		//117
 mapmodel 1 1 0 0  "toca/milkcrate"		//118
+
 mapmodel 1 12 0 0 "toca/tree2"			//119 second tree prototype
+
 mapmodel 1 1 0 0  "toca/pipes/concretepipe"	//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
-
 mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
 mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
 
