gamemodes 'hunt the flag' & 'keep the flag' added
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2485 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -26,6 +26,8 @@ menuitem "Deathmatch"			"mode 2; showmenu maps"
 menuitem "Team Survivor"		"mode 4; showmenu maps"
 menuitem "Survivor"			"mode 3; showmenu maps"
 menuitem "Capture the Flag"		"mode 5; showmenu maps_ctf"
+menuitem "Hunt the Flag"		"mode 13; showmenu maps_htf"
+menuitem "Keep the Flag"		"mode 14; showmenu maps_ktf"
 menuitem "Pistol Frenzy"		"mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 menuitem "One Shot, One Kill"		"mode 10; showmenu maps"
