default_map_settings.cfg cleanup and other stuff
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2515 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -142,6 +142,7 @@ menuitem "Roadblock/Barrier 2"	"newent mapmodel 12"
 menuitem "Drainpipe"		"newent mapmodel 59"
 menuitem "Wheel: Vertical"	"newent mapmodel 88"
 menuitem "Tyre: Horizontal"	"newent mapmodel 83"
+menuitem "Milk crate"		"newent mapmodel 112"
 
 newmenu Plants
 
@@ -192,6 +193,9 @@ menuitem "Knocked-over radioactive drum"	"newent mapmodel 82"
 menuitem "Swiveling security camera"		"saycommand /newent mapmodel 77"
 menuitem "Camera mount (Vertical)"		"saycommand /newent mapmodel 104"
 menuitem "Camera mount (Wall)"			"saycommand /newent mapmodel 105"
+menuitem "Large concrete pipe"			"newent mapmodel 108"
+menuitem "Medium metal pipe"			"newent mapmodel 109"
+menuitem "Small metal pipe"			"newent mapmodel 110"
 
 newmenu Fencing
 
@@ -217,7 +221,7 @@ menuitem "Maintenance"		"saycommand /newent mapmodel 45"
 menuitem "Caution"		"saycommand /newent mapmodel 46"
 menuitem "Biohazard"		"saycommand /newent mapmodel 47"
 menuitem "Toxic"		"saycommand /newent mapmodel 92"
-menuitem "Biohazard"		"saycommand /newent mapmodel 89"
+menuitem "Biohazard (2)"	"saycommand /newent mapmodel 89"
 menuitem "Chemicals"		"saycommand /newent mapmodel 90"
 menuitem "Confined space"	"saycommand /newent mapmodel 91"
 menuitem "Do not enter!"	"saycommand /newent mapmodel 93"
@@ -227,6 +231,7 @@ menuitem "No entry"		"saycommand /newent mapmodel 96"
 menuitem "No smoking"		"saycommand /newent mapmodel 97"
 menuitem "Radioactive"		"saycommand /newent mapmodel 98"
 menuitem "Restricted area"	"saycommand /newent mapmodel 99"
+menuitem "Arab"			"saycommand /newent mapmodel 111"
 
 newmenu Other
 
