rewritten flag modes, added non-team ktf mode
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2521 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -72,7 +72,8 @@ alias lss   [ votemap 9 $arg1 ]
 alias osok  [ votemap 10 $arg1 ]
 alias tosok [ votemap 11 $arg1 ]
 alias htf   [ votemap 13 $arg1 ]
-alias ktf   [ votemap 14 $arg1 ]
+alias tktf  [ votemap 14 $arg1 ]
+alias ktf   [ votemap 15 $arg1 ]
 
 
 //--------------------- editing -------------------------------
