--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -72,6 +72,7 @@ alias lss   [ votemap 9 $arg1 ]
 alias osok  [ votemap 10 $arg1 ]
 alias tosok [ votemap 11 $arg1 ]
 alias htf   [ votemap 13 $arg1 ]
+alias vip   [ votemap 13 $arg1 ]
 alias tktf  [ votemap 14 $arg1 ]
 alias ktf   [ votemap 15 $arg1 ]
 
