--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -160,16 +160,16 @@ mapmodel 1 1 0 0 "toca/milkcrate"		// 112
 // mapmodel 4 1 0 0 "bridge_shine"		// Platform for ac_shine, specifically textured for its surroundings.
 // mapmodel 0 15 0 0 "ladderx15_center3"	// Special ladder model for ac_desert.
 // mapmodel 3 1 0 0 "toca/grid6x8"		// A metal mesh, specifically designed for ac_aqueous.
-
-// mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/beam"	// Metal beam to support toca's stairs. Created for
-								// ac_aqueous (but not used).
-// mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/handrail"	// Handrail for toca's metal platforms. Specific to
-								// ac_aqueous.
-// mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs1"	// Special stairs platforms with handrails. Sepcific to 
-							// ac_aqueous. This model requires careful clipping to be used.
-// mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs2"	// Special stairs platforms with handrails. Sepcific to 
-							// ac_aqueous. This model requires careful clipping to be used.
-
+// mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/beam"
+						// Metal beam to support toca's stairs. Made for ac_aqueous (not used).
+// mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/handrail"
+						// Handrail for toca's metal platforms. Specific to ac_aqueous.
+// mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs1"
+						// Special stairs platforms with handrails. Specific to ac_aqueous. 
+						// This model requires careful clipping to be used.
+// mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs2"
+						// Special stairs platforms with handrails. Specific to ac_aqueous. 
+						// This model requires careful clipping to be used.
 
 // These plant mapmodels by toca, are currently still in testing...
 // mapmodel 0 0 0 0 "toca/bush1"
