--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -192,6 +192,7 @@ loadsky "textures/skymaps/steini/steini4"	// Comment this if you want to use a d
 // loadsky "textures/skymaps/iceflow/iceflow"
 // loadsky "textures/skymaps/ladynighthawk/inhcanyons1"
 // loadsky "textures/skymaps/socksky/nightball"
+// loadsky "textures/skymaps/socksky/grave"
 
 
 
@@ -546,3 +547,4 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 // texture 0 "./wotwot/urban/electric3_bla.jpg"
 // texture 0 "./wotwot/urban/electric1.jpg"  
 // texture 0 "./wotwot/urban/electric1_bla.jpg"
+// texture 0 "./openfootage/stonewall_4.jpg"
