shadow settings slider
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2569 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -84,6 +84,8 @@ alias new_gfx_quality [
         watersubdiv 2
         dynlight 16
         waterreflect 1
+        stencilshadow 40
+        stencilbits 8
         dynshadow 40
         lighterror 1
         scorch 1
@@ -99,6 +101,8 @@ alias new_gfx_quality [
             watersubdiv 2
             dynlight 16
             waterreflect 1
+            stencilshadow 40
+            stencilbits 8
             dynshadow 40
             lighterror 4
             scorch 1
@@ -119,6 +123,13 @@ alias new_gfx_quality [
                 ] [
                     waterreflect 0
                 ]
+                if (|| (glext "GL_EXT_stencil_two_side") (glext "GL_ATI_separate_stencil")) [
+                    stencilshadow 40
+                    stencilbits 8
+                ] [
+                    stencilshadow 0
+                    stencilbits 0
+                ]
                 dynshadow 40
                 lighterror 4
                 scorch 1
@@ -133,6 +144,8 @@ alias new_gfx_quality [
                 watersubdiv 16
                 dynlight 0
                 waterreflect 0
+                stencilshadow 0
+                stencilbits 0
                 dynshadow 0
                 lighterror 10
                 scorch 0
@@ -233,8 +246,32 @@ alias watersubdiv_valuemap "16 8 4 2 1"
 menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
+getshadowq = [
+    if $stencilshadow [result 2] [
+        if $dynshadow [result 1] [result 0]
+    ]
+]
+
+setshadowq = [
+    if (= $arg1 2) [
+        stencilshadow 40
+        stencilbits 8
+        dynshadow 40
+    ] [
+        if (= $arg1 1) [
+            stencilshadow 0
+            stencilbits 0
+            dynshadow 40 
+        ] [
+            stencilshadow 0
+            stencilbits 0
+            dynshadow 0
+        ]
+    ]
+]
+
 menuitemcheckbox "Dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
-menuitemcheckbox "Dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
+menuitemslider "Dynamic player shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
 menuitemcheckbox "High process priority: " "$highprocesspriority" "highprocesspriority $arg1"
 
 menuitem "FPS range.." "showmenu fpsrange"
