shadow rendering optimizations
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2581 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -166,6 +166,7 @@
 		<Unit filename="../src/servercontroller.h" />
 		<Unit filename="../src/serverevents.h" />
 		<Unit filename="../src/serverms.cpp" />
+        <Unit filename="../src/shadow.cpp" />
 		<Unit filename="../src/sound.cpp" />
 		<Unit filename="../src/sound.h" />
 		<Unit filename="../src/texture.cpp" />
