make shadow quality check for stencil bits
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2589 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -247,7 +247,7 @@ menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $water
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 getshadowq = [
-    if $stencilshadow [result 2] [
+    if (&& $stencilshadow $stencilbits) [result 2] [
         if $dynshadow [result 1] [result 0]
     ]
 ]
