added: ceiling fan and pine tree model
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2594 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -142,13 +142,12 @@ mapmodel 2 2 0 0 "toca/airconditioner"		//110
 mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
 
 
-//mapmodel 1 1 0 0 "toca/ceillingfan"	//112 crappy fan blades animation
-mapmodel 0 0 0 0 "nothing""		//112
-mapmodel 0 0 0 0  "nothing"		//113 exit sign
-
-
+mapmodel 0 0 0 0 "toca/stairsacc/handrail"	//112
+mapmodel 0 0 0 0 "toca/stairsacc/beam"		//113
 mapmodel 0 0 0 0  "toca/smallpalm"		//114 alpha channel test plant #1
+
 mapmodel 1 12 0 0 "toca/tree1"			//115 tree prototype
+
 
 //mapmodel 0 0 0 0  "toca/grass1"		//116 cross model for grass or plants
 mapmodel 0 0 0 0 "toca/bush1"			//116 alpha channel test plant #2
@@ -162,6 +161,8 @@ mapmodel 1 1 0 0  "toca/pipes/concretepipe"	//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
 mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
 mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
+mapmodel 1 1 0 0  "toca/ceilingfan"		//124
+mapmodel 0 20 0 0  "toca/pine"			//125
 
 
 
