cfg var cleanups
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2605 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -3,6 +3,7 @@
 music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
 
 alias delayed_firstrun [
+    new_gfx_quality 2
 	showmenu "QUICK setup"
 ]
 
