list tktf in menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2629 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -36,20 +36,8 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 
 
-newmenu maps_ctf 
-// Add maps to the below list to include them in the CTF map menu. Maps should contain flags here.
-genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
-menuitem """"
-menuitem "Show all maps.." [showmenu "all maps"]
-
-newmenu maps_htf
-// Add maps to the below list to include them in the HTF map menu.
-genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
-menuitem	""""
-menuitem	"Show all maps..." [ showmenu "all maps" ]
-
-newmenu maps_ktf 
-// Add maps to the below list to include them in the KTF map menu. Maps should contain flags here.
+newmenu maps_flags 
+// Add maps to the below list to include them in the CTF, KTF & TKTF map menu. Maps should contain flags here.
 genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
