--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -18,6 +18,7 @@ menuitem "Vote to kick a player"		[showmenu "kick player"]
 menuitem "Vote to ban a player" 		[showmenu "ban player"]
 menuitem "Vote to remove bans"			"removebans"
 menuitem "Vote for autoteam"			[ showmenu "Auto Adjust Teams" ]
+menuitem "Vote for shuffle teams"		"shuffleteams"
 
 newmenu Gamemode
 
@@ -25,9 +26,10 @@ menuitem "Team Deathmatch"		"mode 0; showmenu maps"
 menuitem "Deathmatch"			"mode 2; showmenu maps"
 menuitem "Team Survivor"		"mode 4; showmenu maps"
 menuitem "Survivor"			"mode 3; showmenu maps"
-menuitem "Capture the Flag"		"mode 5; showmenu maps_ctf"
-menuitem "Hunt the Flag"		"mode 13; showmenu maps_htf"
-menuitem "Keep the Flag"		"mode 14; showmenu maps_ktf"
+menuitem "Capture the Flag"		"mode 5; showmenu maps_flags"
+menuitem "Hunt the Flag"		"mode 13; showmenu maps"
+menuitem "Keep the Flag"		"mode 15; showmenu maps_flags"
+menuitem "Team Keep the Flag"		"mode 14; showmenu maps_flags"
 menuitem "Pistol Frenzy"		"mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 menuitem "One Shot, One Kill"		"mode 10; showmenu maps"
