--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -18,7 +18,7 @@ menuitem "Vote to kick a player"		[showmenu "kick player"]
 menuitem "Vote to ban a player" 		[showmenu "ban player"]
 menuitem "Vote to remove bans"			"removebans"
 menuitem "Vote for autoteam"			[ showmenu "Auto Adjust Teams" ]
-menuitem "Vote for shuffle teams"		"shuffleteams"
+menuitem "Vote to shuffle teams"		"shuffleteams"
 
 newmenu Gamemode
 
