lansearch in menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2632 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,8 +1,7 @@
 newmenu multiplayer
 
-menuitem "Join a server"		"showmenu server"
-menuitem "Update servers"		"updatefrommaster; showmenu server"
-menuitem "Join LAN Game"		"lanconnect"
+menuitem "Join a server"		"updatefrommaster; showmenu server"
+menuitem "Join a LAN server"	"updatefromlanmasters; showmenu server"
 menuitem "Disconnect"			"disconnect"
 menuitem "Server voting..."		[ showmenu "Server voting" ]
 menuitem "Chat"				"saycommand"
